Viewmodel layer completed

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,6 +39,9 @@ android {
     testOptions {
         animationsDisabled = true
     }
+    buildFeatures {
+        viewBinding true
+    }
 }
 
 dependencies {
@@ -58,8 +61,9 @@ dependencies {
     implementation 'com.jakewharton.espresso:okhttp3-idling-resource:1.0.0'
 
     testImplementation 'junit:junit:4.13.2'
-    testImplementation 'com.nhaarman.mockitokotlin2:mockito-kotlin:2.2.0'
-    testImplementation 'org.mockito:mockito-inline:5.2.0'
+    testImplementation "org.mockito.kotlin:mockito-kotlin:4.1.0"
+    testImplementation "org.mockito:mockito-inline:5.2.0"
+    testImplementation "io.mockk:mockk:1.13.8"
     testImplementation 'androidx.arch.core:core-testing:2.2.0'
     testImplementation 'org.jetbrains.kotlinx:kotlinx-coroutines-test:1.7.3'
 
