Loader feature completed

--- a/build.gradle
+++ b/build.gradle
@@ -5,8 +5,10 @@ buildscript {
         mavenCentral()
     }
     dependencies {
-        classpath "com.android.tools.build:gradle:8.2.2"
+        classpath 'com.android.tools.build:gradle:8.7.2'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        classpath 'com.google.dagger:hilt-android-gradle-plugin:2.51.1'
+        classpath "com.google.devtools.ksp:com.google.devtools.ksp.gradle.plugin:1.9.22-1.0.17"
     }
 }
 
@@ -16,6 +18,7 @@ allprojects {
         mavenCentral()
     }
 }
+
 
 tasks.register("clean", Delete) {
     delete(rootProject.buildDir)
