--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,7 +2,10 @@ plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
     id 'org.jetbrains.kotlin.plugin.serialization' version '1.9.22'
-    id 'com.google.devtools.ksp' version '1.9.22-1.0.17'
+
+    id 'kotlin-kapt'
+    id 'com.google.dagger.hilt.android'
+
 }
 
 android {
@@ -74,4 +77,14 @@ dependencies {
     androidTestImplementation('com.adevinta.android:barista:4.3.0') {
         exclude group: 'org.jetbrains.kotlin'
     }
+
+    //hilt
+    implementation 'com.google.devtools.ksp:symbol-processing-api:1.9.22-1.0.17'
+    implementation "com.google.dagger:hilt-android:2.51.1"
+    kapt "com.google.dagger:hilt-compiler:2.51.1"
+}
+
+// Allow references to generated code
+kapt {
+    correctErrorTypes true
 }
