--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="petros.efthymiou.groovy">
 
     <uses-permission android:name="android.permission.INTERNET" />
@@ -11,7 +12,10 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:usesCleartextTraffic="true"
-        android:theme="@style/Theme.Groovy">
+        android:theme="@style/Theme.Groovy"
+        tools:ignore="UnusedAttribute"
+        android:name=".GroovyApplication"
+        >
         <activity
             android:name=".MainActivity"
             android:exported="true"
